# umbra

./: .crates.toml  .crates2.json  .gitignore  .gitmodules  ARTI.md  C-TOR.md  CGO_NOTES.md  CLAUDE.md  CONTENTS.md  CONTEXT.md  CRYPTO.md  Cargo.toml  Claude.md  DEFECTS.md  DEFECTS_LABS.md  FOLDER_HIERARCHY.md  INSTRUCTIONS.md  LAB_MANIFEST.md  LOGGING.md  MISSION.md  OBFS4.md  ONION_SERVICES.md  README.md  STATUS.md  SYNC_LOG.md  TASKS.md  TASKS_LABS.md  arti.toml  debug.toml
.agent/: circuit-report.md
.agent/instructions/: current-task.md
.agent/rules/: arti-expert.md  physical-constraints.md
.agent/skills/: map_arti_internals.py
.agent/workflows/: status-report.md  sync.md
awatcher/: .gitignore  CONTENTS.md  CONTEXT.md  Cargo.toml  DEFECTS.md  DESIGN.md  FOR_GEMINI.md  README.md  SYNC_LOG.md  TASKS.md
awatcher/.agent/workflows/: checkpoint.md
awatcher/src/: app.rs  main.rs  theme.rs  ui.rs
awatcher/src/data/: config.rs  deps.rs  logs.rs  mod.rs  process.rs
etc/: arti.toml
labs/: ONION_IDEAS.md
labs/arch-explorer/: Cargo.toml
labs/arch-explorer/src/: main.rs
labs/cgo-prototype/: Cargo.toml
labs/cgo-prototype/src/: main.rs
legacy/: C-TOR.md  FOLDER_HIERARCHY.md  LISTS.md  ONION_SERVER.md  SKILL.md  arti.toml
legacy/awatcher/src/: actions.rs
legacy/awatcher/src/data/: logs.rs  onion.rs
legacy/onion-services/: AUTOMATION.md  NOTES.md
legacy/onion-services/configs/: NOTES.md
legacy/onion-services/logs/: NOTES.md
legacy/onion-services/services/: NOTES.md
legacy/onion-services/services/comms/: NOTES.md
legacy/onion-services/services/comms/ghost_ssh/: NOTES.md
legacy/onion-services/services/comms/ontology_sync/: NOTES.md
legacy/onion-services/services/comms/vault_drop/: NOTES.md
legacy/onion-services/services/defi/: NOTES.md
legacy/onion-services/services/defi/atomic_swap/: NOTES.md
legacy/onion-services/services/defi/rpc_fortress/: NOTES.md
legacy/onion-services/services/defi/zk_relayer/: NOTES.md
legacy/onion-services/services/shared/: NOTES.md
legacy/onion-services/services/stealth/: NOTES.md
legacy/onion-services/services/stealth/adaptive_pt/: NOTES.md
legacy/onion-services/services/stealth/ghost_rss/: NOTES.md
legacy/onion-services/services/stealth/riseup_bridge/: NOTES.md
legacy/onion-services/tmp/: NOTES.md
missioncontrol/: .gitignore  ARCHITECTURE.md  CONTENTS.md  CONTEXT.md  Cargo.toml  INSTRUCTIONS.md  MISSION.md  README.md  SECURITY.md  SUGGESTIONS.md  SYNC_LOG.md  TASKS.md
missioncontrol/config/: defaults.toml  missioncontrol.toml
missioncontrol/core/: Cargo.toml
missioncontrol/core/src/: config.rs  db.rs  lib.rs
missioncontrol/core/src/arti/: mod.rs  onion.rs
missioncontrol/core/src/integrations/: darkmatter.rs  guardian.rs  manager.rs  mod.rs  monero.rs
missioncontrol/docs/: ARTI_ADMIN.md
missioncontrol/legacy/: Cargo.toml
missioncontrol/legacy/src/: main.rs
missioncontrol/legacy/src/integrations/: guardian.rs
missioncontrol/legacy/src/web/: mod.rs  pages.rs
missioncontrol/src/: config.rs  db.rs  main.rs
missioncontrol/src/arti/: mod.rs  onion.rs
missioncontrol/src/integrations/: mod.rs
missioncontrol/src/web/: api.rs  pages.rs
missioncontrol/static/js/: circuits.js  guardian.js  integrations.js  metrics.js  services.js
missioncontrol/static/style/: main.css
missioncontrol/tauri/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
missioncontrol/tauri/src/: App.tsx  index.css
missioncontrol/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
missioncontrol/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
missioncontrol/tauri/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
missioncontrol/tauri/src/components/ui/: GlassCard.tsx
missioncontrol/tauri/src/hooks/: useArtiStatus.ts  useCryptoStatus.ts  useGuardianEvents.ts  useSystemStats.ts
missioncontrol/tauri/src/pages/: Circuits.tsx  DarkMatter.tsx  Dashboard.tsx  Guardian.tsx  Integrations.tsx  Metrics.tsx  Services.tsx
modules/astrometrics-core/: Cargo.toml
modules/astrometrics-core/src/: lib.rs
modules/monitor-flow/: Cargo.toml
modules/monitor-flow/src/: lib.rs
modules/network-topology/: Cargo.toml
modules/network-topology/src/: lib.rs
shadowmenu/: IMPLEMENTATION.md  SHADOWMENU.md
tools/awatcher/: ARCHITECTURE.md  CONTENTS.md  CONTEXT.md  DEFECTS.md  DESIGN.md  FOR_GEMINI.md  MISSION.md  README.md  SYNC_LOG.md  TASKS.md
tools/awatcher/src/: app.rs
tools/awatcher/src/data/: socks.rs
tools/mkp224o/: README_SETUP.md
