[package]
name = "awatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
sysinfo = "0.30"
tokio-stream = "0.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
