[package]
name = "missioncontrol-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Tor
# Tor
arti-client = { path = "../../arti/crates/arti-client", version = "0.38.0", features = ["full", "experimental-api"] }
tor-rtcompat = { path = "../../arti/crates/tor-rtcompat", version = "0.38.0", features = ["tokio"] }
tor-circmgr = { path = "../../arti/crates/tor-circmgr", version = "0.38.0", features = ["experimental-api"] }
tor-netdir = { path = "../../arti/crates/tor-netdir", version = "0.38.0", features = ["experimental-api"] }
tor-linkspec = { path = "../../arti/crates/tor-linkspec", version = "0.38.0" }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
figment = { version = "0.10", features = ["toml", "env"] }
chrono = { version = "0.4", features = ["serde"] }
