[package]
name = "missioncontrol-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Tor
arti-client = { path = "../../arti-upstream/crates/arti-client", version = "0.38.0", features = ["full", "experimental-api"] }
tor-rtcompat = { path = "../../arti-upstream/crates/tor-rtcompat", version = "0.38.0", features = ["tokio"] }
tor-circmgr = { path = "../../arti-upstream/crates/tor-circmgr", version = "0.38.0", features = ["experimental-api"] }
tor-netdir = { path = "../../arti-upstream/crates/tor-netdir", version = "0.38.0", features = ["experimental-api"] }
tor-linkspec = { path = "../../arti-upstream/crates/tor-linkspec", version = "0.38.0" }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
figment = { version = "0.10", features = ["toml", "env"] }
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
