[package]
name = "missioncontrol"
version = "0.1.0"
edition = "2021"
description = "Secure Arti-based router and dashboard for the AntiGravity ecosystem"
authors = ["Roy D'Souza"]
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full", "signal"] }

# Web Framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "set-header"] }

# Tor Integration (Embedded)
arti-client = { version = "0.23", features = ["full"] }
tor-rtcompat = { version = "0.23", features = ["tokio"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "missioncontrol"
path = "src/main.rs"
