[package]
name = "missioncontrol"
version = "0.1.0"
description = "Secure Arti-based router and dashboard"
authors = ["Roy D'Souza"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
missioncontrol-core = { path = "../../core" }

[lib]
name = "missioncontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
